--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,55 @@
-node_module
+# =========================
+# Logs
+# =========================
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# =========================
+# Node.js dependencies
+# =========================
+node_modules/
+backend/node_modules/
+frontend/node_modules/
+
+# =========================
+# Build output
+# =========================
+dist
+dist-ssr
+frontend/build/
+backend/dist/
+
+# =========================
+# Environment variables
+# =========================
+.env
+backend/.env
+frontend/.env
+
+# =========================
+# Local files
+# =========================
+*.local
+
+# =========================
+# Editor directories and files
+# =========================
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# =========================
+# Misc
+# =========================
+Thumbs.db
