--- a/.gitignore
+++ b/.gitignore
@@ -13,23 +13,23 @@ lerna-debug.log*
 # Node.js dependencies
 # =========================
 node_modules/
-backend/node_modules/
-frontend/node_modules/
+server/node_modules/
+client/node_modules/
 
 # =========================
 # Build output
 # =========================
 dist
 dist-ssr
-frontend/build/
-backend/dist/
+client/build/
+server/dist/
 
 # =========================
 # Environment variables
 # =========================
 .env
-backend/.env
-frontend/.env
+server/.env
+client/.env
 
 # =========================
 # Local files
